--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,7 +48,7 @@ a {
     @apply text-light bg-primary shadow-none outline outline-1 translate-x-0.5 translate-y-1;
   }
   .link {
-    @apply font-serif underline;
+    @apply font-serif underline mx-1;
   }
   .link:hover {
     @apply italic;
@@ -66,6 +66,10 @@ a {
   }
 }
 
+a.btn {
+  white-space: nowrap;
+}
+
 @keyframes waveX {
   0%,
   100% {
@@ -77,7 +81,7 @@ a {
 }
 
 .textarea {
-  @apply bg-transparent border border-light rounded-lg text-light py-0.5 px-2 font-sans font-light text-sm
+  @apply bg-primary border border-light rounded-lg text-light py-0.5 px-2 font-sans font-light text-sm
   h-24;
   scrollbar-gutter: stable;
 }
@@ -100,6 +104,42 @@ a {
   border-color: transparent;
 }
 
+ol {
+  @apply list-decimal pl-10 my-2;
+}
+
+ol li::marker {
+  @apply text-tertiary font-serif text-lg;
+}
+
+ul {
+  @apply pl-6 my-2;
+}
+
+ul > li {
+  @apply pl-4 relative;
+}
+
+ul > li:before {
+  content: " ";
+  min-height: 6px;
+  min-width: 6px;
+  left: 0px;
+  top: 8px;
+  @apply w-1 border border-tertiary absolute rounded;
+}
+ul > li > ul > li:before {
+  @apply rounded-none;
+}
+ul > li > ul > li > ul > li:before {
+  @apply rounded-none;
+  transform: rotate(45deg);
+}
+
+.table {
+  @apply border-primary;
+}
+
 .table th,
 thead {
   @apply font-serif italic text-light bg-primary px-1 
@@ -107,7 +147,7 @@ thead {
 }
 
 .table td {
-  @apply border border-primary px-1 text-center py-0 
+  @apply border px-1 border-inherit text-center py-0 
   first:rounded-bl-xl last:rounded-br-xl;
 }
 
